feat(ui): redesign login, update branding, and enhance sliders Major UI/UX improvements and functional updates: **Branding & Layout:** - **Logo**: Replaced text-based "YUMO." logo with the image logo ([logo.jpeg](cci:7://file:///Users/berkayulku/Desktop/yumo/frontend/assets/logo.jpeg:0:0-0:0)) in Navbar, Footer, and Admin Sidebar. - **Footer**: Simplified to a minimal design containing only logo, copyright, Instagram icon, and contact email. - **Navbar**: Removed the public "Login" user icon to restrict access; admin login is now only accessible via redirection from protected routes. **Login Page:** - **Redesign**: Implemented a modern split-layout design. - **Visuals**: Added a high-quality luxury bag background image. - **UI**: Improved form aesthetics with better typography and icons. **Slider Management:** - **Toggle**: Fixed the "Active" toggle button styling in the admin editor. - **External Links**: Updated [HeroSlider](cci:1://file:///Users/berkayulku/Desktop/yumo/frontend/src/components/HeroSlider.tsx:15:0-142:1) to support and automatically detect external URLs (opening in new tab). - **UX**: Added placeholder guidance in `SliderForm` for link input.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
       - ./frontend:/app
     ports:
       - "5173:5173"
-    command: npm run dev -- --host
+    command: sh -c "npm install && npm run dev -- --host"
     networks:
       - yumo-network
     # Only if we want frontend to wait for backend, typically not strict for dev
