--- a/deploy/nginx/prod.conf
+++ b/deploy/nginx/prod.conf
@@ -1,41 +1,48 @@
 server {
     listen 80;
     server_name _;
+    
+    # 1. Frontend (Default Root)
+    root /var/www/frontend/dist;
+    index index.html index.php;
+
     client_max_body_size 100M;
 
-    # Frontend Root (built files)
-    root /var/www/frontend/dist;
-    index index.html;
-
-    # Backend Storage
-    location /storage/ {
-        alias /var/www/backend/public/storage/;
+    # 2. Backend API Routing
+    # Force these paths to be handled by Laravel
+    location /api {
+        try_files $uri $uri/ @laravel;
     }
-
-    # API & Sanctum & Health Check
-    location ~ ^/(api|sanctum|up) {
-        root /var/www/backend/public;
+    
+    location /sanctum {
         try_files $uri $uri/ @laravel;
     }
 
-    # Fallback to Laravel for API/Backend logic
-    location @laravel {
-        root /var/www/backend/public;
-        rewrite ^/(.*)$ /index.php last;
+    location /up {
+        try_files $uri $uri/ @laravel;
     }
 
-    # Handle PHP Scripts
+    # Storage (Images)
+    location /storage {
+        alias /var/www/backend/public/storage;
+    }
+
+    # 3. Laravel Bridge
+    location @laravel {
+        root /var/www/backend/public;
+        rewrite ^ /index.php last;
+    }
+
+    # 4. PHP Execution (Docker Service: app:9000)
     location ~ \.php$ {
         root /var/www/backend/public;
-        try_files $uri =404;
+        include fastcgi_params;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
-        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    # Frontend - SPA Routing
-    # Any other route goes to index.html so React Router handles it
+    # 5. React Router (Frontend Fallback)
     location / {
         try_files $uri $uri/ /index.html;
     }
