--- a/deploy/nginx/prod.conf
+++ b/deploy/nginx/prod.conf
@@ -9,7 +9,6 @@ server {
     client_max_body_size 100M;
 
     # 2. Backend API Routing
-    # Force these paths to be handled by Laravel
     location /api {
         try_files $uri $uri/ @laravel;
     }
@@ -39,7 +38,9 @@ server {
         include fastcgi_params;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        
+        # CRITICAL FIX: Map Nginx path (/var/www/backend/...) to PHP Container path (/var/www/...)
+        fastcgi_param SCRIPT_FILENAME /var/www/public$fastcgi_script_name;
     }
 
     # 5. React Router (Frontend Fallback)
